--- a/templates/officer.html
+++ b/templates/officer.html
@@ -14,20 +14,27 @@
 	  <div id="results-wrapper">
       	{% include 'templates/_statement.html' %}
 			
-			<div class="detail-wrapper">
+			<div class="detail-wrapper officer-expanded">
 				<div class="officer" data-case_number="{{ officer.case_number }}">
 					<div class="officer-logo"></div>
 					<div class="officer-text">
-						<h2><a href="{{ url_for('cpd_settlements.officer', slug=officer.slug) }}">{{ officer.prefix }} {{ officer.first }} {{ officer.last }}</a></h2>
-						<div class="badge-num"><span>Badge #:</span> {{ officer.badge_number }}</div>
-						<div class="total-payments-container">
-							<span class="total-payments">${{ officer.total_payments }}</span> 
-							<span>total payments for all related cases</span>
-						</div>
+						<h2>{{ officer.first }} {{ officer.last }}</h2>
+						<h3>{{ officer.prefix }}</h3>
+						{% if officer.badge_number %}
+				          <div class="badge-num"><span>Badge:</span> {{ officer.badge_number }}</div>
+				        {% endif %}
+						
 					</div>
 				</div>
+				<div class="secondary-details">
+					<div class="total-payments-container">
+						<span class="total-payments">${{ officer.total_payments }}</span> 
+						<span>total payments<!--  for all related cases --></span>
+					</div>
+					<div class="notes"></div>
+				</div>
 			</div>
-			<div id="officer-case-map" class="detail-wrapper">
+			<div id="officer-case-map" class="detail-wrapper officer-expanded">
 		  		<div class="wrapper-inner-flex">
 					<div id="map"></div>
 				</div>
