--- a/less/style.less
+++ b/less/style.less
@@ -488,6 +488,11 @@ Form Elements
 /* ==========================================================================
 Results
 ========================================================================== */
+a.block-link {
+  display:block;
+  text-decoration:none;
+  color:inherit;
+}
 .case {
   width:100%;
   border:1px solid @cr-darkest;
