--- a/templates/officer.html
+++ b/templates/officer.html
@@ -28,7 +28,7 @@
 				</div>
 				<div class="secondary-details">
 					<div class="total-payments-container">
-						<span class="total-payments">${{ officer.total_payments }}</span> 
+						<span class="total-payments">{{ format_currency(officer.total_payments) }}</span> 
 						<span>total payments<!--  for all related cases --></span>
 					</div>
 					<div class="notes"></div>
