--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,6 +419,11 @@ Form Elements
 /* ==========================================================================
 Results
 ========================================================================== */
+a.block-link {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
 .case {
   width: 100%;
   border: 1px solid #000000;
