--- a/less/style.less
+++ b/less/style.less
@@ -1529,12 +1529,72 @@ Media Queries
     display: flex;
     flex-wrap: wrap;
   }
-  .form-group {
+  .filter-cases .form-group {
     width: auto;
     flex: 1;
-    padding-right: 20px;
-    &:last-of-type{
-      padding-right:none;
+
+    &:nth-child(1), &:nth-child(2) {
+      padding-right:20px;
     }
   }
 }
+
+@media screen and (max-width: 480px) {
+  .cpd-links {
+    top:60px;
+    width:100%;
+    li {
+      width:50%;
+    }
+    a {
+      line-height:40px;
+    }
+  }
+  .container.cpd-container {
+    padding-top:102px;
+  }
+  .filter-cases .form-group {
+    width: 100%;
+    padding: 0!important;
+    flex: auto;
+  }
+  .case .card-row {
+    display:block;
+  }
+  .case .case-payment-wrapper {
+    min-width:100%;
+    max-width:100%;
+    text-align:left;
+  }
+  .case .case-payment-wrapper .case-payment {
+    margin-bottom: 0;
+    width: 100%;
+  }
+  .case .case-payment-wrapper .case-payment h3 {
+    margin-bottom:0;
+  }
+  .case .case-payment-wrapper h4 {
+    bottom:20px;
+    right:20px;
+    left:auto;
+  }
+  .officer {
+    .officer-text {
+      padding-left:90px;
+      background-size:50px;
+    }
+
+    .officer-logo {
+      width: 90px;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
