--- a/less/style.less
+++ b/less/style.less
@@ -389,6 +389,7 @@ input[type=checkbox]:checked + .option {
 
   &.tags {
     width:100%;
+    margin-bottom:0;
 
     label:not(.option) {
       margin-top:.75em;
