removed typeahead dependency to improve user flow for officer search

--- a/less/style.less
+++ b/less/style.less
@@ -757,6 +757,9 @@ label.results-label {
 /************
   Detail Page
 ************/
+.ids {
+  display:none;
+}
 .detail-wrapper {
   display:none;
 
@@ -864,6 +867,7 @@ label.results-label {
 .case-list, .officer-list {
   display:none;
 }
+
 
 .filter-cases {
   li.cases {
