--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -657,6 +657,9 @@ label.results-label {
 /************
   Detail Page
 ************/
+.ids {
+  display: none;
+}
 .detail-wrapper {
   display: none;
 }
