--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,18 +327,6 @@ select {
 .chosen-container-single.chosen-container-active .chosen-single div b {
   background-position: -18px 10px;
 }
-.twitter-typeahead {
-  min-width: 100%;
-  border: 1px solid #000000;
-  background-color: #ffffff;
-}
-.twitter-typeahead .tt-input,
-.twitter-typeahead .tt-hint {
-  padding: 8px;
-}
-.typeahead {
-  width: 100%;
-}
 .form-group {
   display: inline-block;
   vertical-align: top;
@@ -390,10 +378,12 @@ Form Elements
   margin-bottom: -8px;
 }
 .typeahead {
-  background-color: #fff;
-}
-.typeahead:focus {
-  border: 2px solid #0097cf;
+  width: 100%;
+  border-radius: 0;
+  border: 1px solid #000000;
+  background: #ffffff;
+  padding: 8px 0 8px 8px;
+  height: auto;
 }
 .tt-hint {
   color: #999999;
