--- a/templates/_case.html
+++ b/templates/_case.html
@@ -42,7 +42,7 @@
           <div class="officer-group">
             {% for officer in case.officers %}
               {% include 'templates/_officer.html' %}
-              <a href="{{ site_path }}officer/{{ officer.slug }}" class="police-icon" data-firstname="{{ officer.first }}" data-lastname="{{ officer.last }}"></a>
+              <a href="{{ site_path }}officer/{{ officer.slug }}" class="police-icon" data-firstname="{{ officer.first }}" data-lastname="{{ officer.last }}"><div class="tooltip">{{ officer.first }} {{ officer.last }}</div></a>
             {% endfor %}
            </div>
         </div>
