--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -57,7 +57,7 @@
             <span class="card-label">Officers involved:</span>
             <div class="officer-group">
               <% _.each(model.officers, function(officer) { %>
-              <a href="<%= site_path %>officer/<%= officer.slug %>" class="police-icon" data-firstname="<%= officer.first %>" data-lastname="<%= officer.last %>"></a>
+              <a href="<%= site_path %>officer/<%= officer.slug %>" class="police-icon" data-firstname="<%= officer.first %>" data-lastname="<%= officer.last %>"><div class="tooltip"><%= officer.first %> <%= officer.last %></div></a>
              <% }) %>
              </div>
           </div>
