--- a/templates/payment.html
+++ b/templates/payment.html
@@ -11,7 +11,7 @@
 
     <h2>Officers involved:</h2>
     {% for officer in officers %}
-      <div class="officer" data-case_number="{{ officer.case_number }}">
+      <div class="officer">
          <h3>Badge number: {{ officer.badge_number }}</h3>
       </div>
     {% endfor %}
