--- a/templates/_officer.html
+++ b/templates/_officer.html
@@ -1,4 +1,4 @@
-<div class="officer" data-case_number="{{ officer.case_number }}">
+<div class="officer">
   	<div class="officer-logo"></div>
 	<div class="officer-text">
 	  <h2><a href="{{ url_for('cpd_settlements.officer', slug=officer.slug) }}">{{ officer.first }} {{ officer.last }}</a></h2>
