--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,7 +485,7 @@ a.block-link {
   flex: 1;
 }
 .case .case-summary {
-  margin-top: 20px;
+  margin-top: 12px;
 }
 .case .case-details {
   list-style-type: none;
@@ -498,7 +498,7 @@ a.block-link {
 }
 .case .case-details li {
   display: inline-block;
-  margin: 0;
+  margin: 0 0 8px 0;
 }
 .case .case-details li span {
   display: block;
@@ -1399,23 +1399,39 @@ Media Queries
   }
 }
 @media screen and (max-width: 480px) {
+  #cpd-logo a {
+    width: 44px;
+    height: 44px;
+  }
+  a.cpd-title {
+    padding-top: 20px;
+  }
   .cpd-links {
-    top: 60px;
+    top: 40px;
     width: 100%;
   }
   .cpd-links li {
     width: 50%;
   }
   .cpd-links a {
-    line-height: 40px;
+    line-height: 36px;
   }
   .container.cpd-container {
-    padding-top: 102px;
+    padding-top: 80px;
+  }
+  .container.cpd-container .cpd-container-inner {
+    margin: 20px 0 0 0;
+  }
+  ul.tab-selector li a {
+    padding: 8px 0;
   }
   .filter-cases .form-group {
     width: 100%;
     padding: 0!important;
     flex: auto;
+  }
+  .results-wrapper-inner .results-label {
+    display: none;
   }
   .case .card-row {
     display: block;
@@ -1436,6 +1452,13 @@ Media Queries
     bottom: 20px;
     right: 20px;
     left: auto;
+  }
+  .case .case-details li {
+    width: 100%;
+    margin-bottom: 8px;
+  }
+  .case .case-details li:last-of-type {
+    margin-bottom: 0;
   }
   .officer .officer-text {
     padding-left: 90px;
