--- a/less/style.less
+++ b/less/style.less
@@ -563,7 +563,7 @@ a.block-link {
   }
 
   .case-summary {
-    margin-top:20px;
+    margin-top:12px; //20px minus 8px from case-details li
   }
 
   .case-details {
@@ -576,7 +576,7 @@ a.block-link {
     flex-wrap:wrap;
     li {
       display:inline-block;
-      margin:0;
+      margin:0 0 8px 0;
       span {
         display:block;
       }
@@ -1573,23 +1573,39 @@ Media Queries
 }
 
 @media screen and (max-width: 480px) {
+  #cpd-logo a {
+    width:44px;
+    height:44px;
+  }
+  a.cpd-title {
+    padding-top:20px;
+  }
   .cpd-links {
-    top:60px;
+    top:40px;
     width:100%;
     li {
       width:50%;
     }
     a {
-      line-height:40px;
+      line-height:36px;
     }
   }
   .container.cpd-container {
-    padding-top:102px;
+    padding-top:80px;
+  }
+  .container.cpd-container .cpd-container-inner {
+    margin: 20px 0 0 0;
+  }  
+  ul.tab-selector li a {
+      padding: 8px 0;
   }
   .filter-cases .form-group {
     width: 100%;
     padding: 0!important;
     flex: auto;
+  }
+  .results-wrapper-inner .results-label {
+    display:none;
   }
   .case .card-row {
     display:block;
@@ -1610,6 +1626,13 @@ Media Queries
     bottom:20px;
     right:20px;
     left:auto;
+  }
+  .case .case-details li {
+    width: 100%;
+    margin-bottom: 8px;
+    &:last-of-type {
+      margin-bottom:0;
+    }
   }
   .officer {
     .officer-text {
