--- a/less/style.less
+++ b/less/style.less
@@ -169,6 +169,38 @@ Filters
   text-align:center;
   font-size:2em;
 }
+.number-of-incidents {
+  text-transform: capitalize;
+}
+.clickable {
+  background-color: fade(@cr-alert,80%);
+  padding:8px 24px 8px 8px;
+  position:relative;
+  white-space: nowrap;
+
+  .x {
+    color:@cr-lightest;
+    background-color:@cr-darkest;
+    border-radius:50%;
+    padding: 0;
+    display: inline-block;
+    width: 22px;
+    height: 22px;
+    margin-right: 4px;
+    font-weight: 700;
+    line-height: 18px;
+    font-size: 15px;
+    position: absolute;
+    top: 2px;
+
+    &:hover {
+      color:@cr-alert;
+      cursor:pointer;
+      opacity:1;
+    }
+  }
+  
+}
 .clear-filters {
     font-size: 14px;
     margin-top: 20px;
@@ -176,19 +208,20 @@ Filters
     opacity:.6;
 
     .x {
-      background-color:@cr-alert;
+      background-color:@cr-darkest;
       border-radius:50%;
-      padding: 0 0 1px 1px;
+      padding: 0;
       display: inline-block;
       width: 22px;
       height: 22px;
       margin-right: 4px;
       font-weight: 700;
-      line-height: 20px;
+      line-height: 18px;
       font-size: 15px;
     }
 
     &:hover {
+      color:@cr-alert;
       cursor:pointer;
       opacity:1;
     }
@@ -564,6 +597,7 @@ a.block-link {
 
   .case-summary {
     margin-top:12px; //20px minus 8px from case-details li
+    margin-bottom:8px;
   }
 
   .case-details {
@@ -651,7 +685,7 @@ a.block-link {
           bottom: 52px;
           left: 50%;
           transform: translate(-50%);
-          min-width: 120px;
+          white-space: nowrap;
           text-align: center;
           vertical-align: bottom;
 
