--- a/templates/_case_search_form.html
+++ b/templates/_case_search_form.html
@@ -3,7 +3,7 @@
     <form id="case-search-form">
       <div class="form-group">
         <label>Neighborhood</label>
-        <select name="neighborhood" class="chosen">
+        <select name="neighborhood" id="neighborhood" class="chosen">
           <option value="">Any</option>
           <option value="unknown">Unknown</option>
           
@@ -184,7 +184,7 @@
 
       <div class="form-group">
         <label>Primary cause</label>
-        <select data-placeholder="Select primary causes" name="primary_causes[]" class="chosen">
+        <select data-placeholder="Select primary causes" id="primary_cause" name="primary_causes[]" class="chosen">
           <option value="">Any</option>
           
             <option value="48 HOUR VIOLATION">48 HOUR VIOLATION</option>
@@ -332,7 +332,7 @@
 
       <div class="form-group">
         <label>Payment amount</label>
-        <select name="total_payments" class="payment chosen">
+        <select name="total_payments" id="payment_amount" class="payment chosen">
           <option value="">Any</option>
           <option value="0-3000">$0-$3,000</option>
           <option value="3000-12000">$3,000-$12,000</option>
